--- a/ohm_tutorial_launch/package.xml
+++ b/ohm_tutorial_launch/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>stdr_launchers</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
