-- added pyhton for students

--- a/hello_world/CMakeLists.txt
+++ b/hello_world/CMakeLists.txt
@@ -6,6 +6,7 @@ project(hello_world)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  rospy
   std_msgs
 )
 
