--- a/hello_world/package.xml
+++ b/hello_world/package.xml
@@ -41,7 +41,9 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>rospy</build_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depene>rospy</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
