--- a/turtle_control/CMakeLists.txt
+++ b/turtle_control/CMakeLists.txt
@@ -128,6 +128,7 @@ include_directories(
 
 ## Declare a C++ executable
 add_executable(turtle_control_node src/turtle_control_node.cpp)
+add_executable(turtle_follow_node src/turtle_follow_node.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -135,6 +136,9 @@ add_executable(turtle_control_node src/turtle_control_node.cpp)
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(turtle_control_node
+   ${catkin_LIBRARIES}
+ )
+ target_link_libraries(turtle_follow_node
    ${catkin_LIBRARIES}
  )
 
